--- a/pytorch_object_detection/yolov3_spp/cfg/hyp.yaml
+++ b/pytorch_object_detection/yolov3_spp/cfg/hyp.yaml
@@ -10,11 +10,11 @@ lr0: 0.001  # initial learning rate (SGD=5E-3 Adam=5E-4)
 lrf: 0.01  # final OneCycleLR learning rate (lr0 * lrf)
 momentum: 0.937  # SGD momentum
 weight_decay: 0.0005  # optimizer weight decay
-fl_gamma: 1.5  # focal loss gamma (efficientDet default is gamma=1.5)
+fl_gamma: 0.0  # focal loss gamma (efficientDet default is gamma=1.5)
 hsv_h: 0.0138  # image HSV-Hue augmentation (fraction)
 hsv_s: 0.678  # image HSV-Saturation augmentation (fraction)
 hsv_v: 0.36  # image HSV-Value augmentation (fraction)
-degrees: 1.98  # image rotation (+/- deg)
-translate: 0.05  # image translation (+/- fraction)
-scale: 0.05  # image scale (+/- gain)
-shear: 0.641  # image shear (+/- deg)
+degrees: 0.  # image rotation (+/- deg)
+translate: 0.  # image translation (+/- fraction)
+scale: 0.  # image scale (+/- gain)
+shear: 0.  # image shear (+/- deg)
