--- a/pytorch_object_detection/retinaNet/requirements.txt
+++ b/pytorch_object_detection/retinaNet/requirements.txt
@@ -1,8 +1,8 @@
-lxml==4.6.3
-matplotlib==3.2.1
+lxml
+matplotlib
 numpy==1.17.0
 tqdm==4.42.1
 torch==1.7.1
 torchvision==0.8.2
-pycocotools==2.0.0
+pycocotools
 Pillow
