--- a/pytorch_object_detection/ssd/requirements.txt
+++ b/pytorch_object_detection/ssd/requirements.txt
@@ -1,8 +1,8 @@
 numpy==1.17.0
-matplotlib==3.2.1
+matplotlib
 tqdm==4.42.1
-pycocotools==2.0.0
+pycocotools
 torch==1.6.0
 torchvision==0.7.0
-lxml==4.6.3
+lxml
 Pillow
